crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completion_fixtures@completes_block_decl_prefix_keywords.v.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
input_file: crates/ide/src/completion/engine/fixtures/completes_block_decl_prefix_keywords.v
---
[
    CompletionItem {
        label: "real",
        kind: Snippet,
        edit: Some(
            TextEditItem {
                ins: "real",
                del: 26..28,
            },
        ),
        snippet_edit: Some(
            TextEditItem {
                ins: "real ${1:name};",
                del: 26..28,
            },
        ),
    },
    CompletionItem {
        label: "realtime",
        kind: Snippet,
        edit: Some(
            TextEditItem {
                ins: "realtime",
                del: 26..28,
            },
        ),
        snippet_edit: Some(
            TextEditItem {
                ins: "realtime ${1:name};",
                del: 26..28,
            },
        ),
    },
    CompletionItem {
        label: "reg",
        kind: Snippet,
        edit: Some(
            TextEditItem {
                ins: "reg",
                del: 26..28,
            },
        ),
        snippet_edit: Some(
            TextEditItem {
                ins: "reg ${1:name};",
                del: 26..28,
            },
        ),
    },
    CompletionItem {
        label: "release",
        kind: Snippet,
        edit: Some(
            TextEditItem {
                ins: "release",
                del: 26..28,
            },
        ),
        snippet_edit: Some(
            TextEditItem {
                ins: "release ${1:lhs};",
                del: 26..28,
            },
        ),
    },
    CompletionItem {
        label: "repeat",
        kind: Snippet,
        edit: Some(
            TextEditItem {
                ins: "repeat",
                del: 26..28,
            },
        ),
        snippet_edit: Some(
            TextEditItem {
                ins: "repeat (${1:N}) begin\n\t${0}\nend",
                del: 26..28,
            },
        ),
    },
    CompletionItem {
        label: "real",
        kind: Keyword,
        edit: Some(
            TextEditItem {
                ins: "real",
                del: 26..28,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "realtime",
        kind: Keyword,
        edit: Some(
            TextEditItem {
                ins: "realtime",
                del: 26..28,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "reg",
        kind: Keyword,
        edit: Some(
            TextEditItem {
                ins: "reg",
                del: 26..28,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "release",
        kind: Keyword,
        edit: Some(
            TextEditItem {
                ins: "release",
                del: 26..28,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "repeat",
        kind: Keyword,
        edit: Some(
            TextEditItem {
                ins: "repeat",
                del: 26..28,
            },
        ),
        snippet_edit: None,
    },
]
